@@ -17,8 +17,6 @@ tasks as they are completed.
 THESE TASKS SHOULD HAPPEN BEFORE THE NEXT RELEASE
 -------------------------------------------------
 
-* combination editor is broken, unbreak
-
 * unbust nmg (host/net conversion bug)
 
 * test mintie optimization, test performance for release notes
