@@ -28,6 +28,7 @@
 /* system headers */
 #include <stdlib.h>
 #include <tcl.h>
+#include <itcl.h>
 #include <string.h>
 
 /* common headers */
@@ -505,7 +506,12 @@ mged_setup(Tcl_Interp **interpreter)
 
 	/* Initialize [incr Tcl] */
 	Tcl_ResetResult(*interpreter);
-	if (init_itcl && Tcl_Eval(*interpreter, "package require Itcl") != TCL_OK) {
+	/* NOTE: Calling "package require Itcl" here is apparently
+	 * insufficient without other changes elsewhere.  The
+	 * Combination Editor in mged fails with an iwidgets class
+	 * already loaded error if we don't perform Itcl_Init() here.
+	 */
+	if (init_itcl && Itcl_Init(*interpreter) == TCL_ERROR) {
 	    if (!try_auto_path) {
 		Tcl_Namespace *nsp;
 
